Closed Bug 736895 Opened 14 years ago Closed 14 years ago

Suppress warning warning C4355: 'this' : used in base member initializer list in nsHttpChannel::nsHttpChannel

Categories

(Core :: Networking: HTTP, defect)

x86_64
Windows 7
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: briansmith, Assigned: briansmith)

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

I verified that HttpAsyncAborter's constructor does not dereference the passed-in pointer.
Attachment #607022 - Flags: review?(cbiesinger)
Comment on attachment 607022 [details] [diff] [review] Suppress warning warning C4355: 'this' : used in base member initializer list in nsHttpChannel::nsHttpChannel Review of attachment 607022 [details] [diff] [review]: ----------------------------------------------------------------- ::: netwerk/protocol/http/nsHttpChannel.cpp @@ +69,5 @@ > #include "mozilla/Telemetry.h" > #include "nsDOMError.h" > #include "nsAlgorithm.h" > #include "sampler.h" > +#include "base/compiler_specific.h" I'm a little leery about depending too much on the chromium IPC headers; it'd be better if something similar to ALLOW_THIS_IN_INITIALIZER_LIST was added to MFBT first. There are certainly other places that could benefit from it.
Attachment #607022 - Flags: review?(cbiesinger) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: