Bug 736895: Suppress warning warning C4355: 'this' : used in base member initializer list in nsHttpChannel::nsHttpChannel, r=cbiesinger

--HG--
extra : rebase_source : bbcacf34a97671cb4750888a2468f6563c52b99a